# YouDoAPI

./: README.md  pyproject.toml
benchmark/: locustfile.py
src/: config.py  main.py  sanitazion.py  schema.py
src/Graphql/: __init__.py  mutation.py  query.py
src/model/: __init__.py  categories.py  dailyTodo.py  pomodoro.py  test.py  user.py
src/repository/: __init__.py  categories.py  dailyTodo.py  pomodoro.py  test.py  user.py
src/service/: __init__.py  categories.py  dailyTodo.py  pomodoro.py  test.py  user.py
