
# ---- STANDARD CONFIG ----
[project]
name = "YouDoAPI"
description = "Api for a Todo Aplication"
version = "v0.0.1"
readme = "README.md"
requires-python = ">=3.10"

[project.license]
file = "LICENSE"

[tool.debug]
level_debug = "info" # (debug,info,warning,error,critical)
logs_file = false

# ------ CONFIG FOR POETRY ------
[tool.poetry]
name = "YouDoAPI"
version = "v0.0.1"
description = "Api for todo application"
authors = ["Retr0100 <dragonfaiver@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
colorama = "^0.4.6"
pyfiglet = "^1.0.2"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
sqlmodel = "^0.0.14"
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.0"
strawberry-graphql = {extras = ["fastapi"], version = "^0.217.1"}
asyncpg = "^0.29.0"
uuid = "^1.30"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"
coverage = "^7.4.1"
locust = "^2.20.1"


# ------ CONFIG OF RUFF  --------
[tool.ruff]
ignore = ["E501"]
extend-include = ["*.pyw"]
select = ["E","F","N","D","UP","PYI","SLOT","SIM","TD","FIX","W","PL"]
exclude = [
    ".git",
    ".git-rewrite",
    ".venv",
    "__pypackages__",
    "venv",
    ".env"
]
respect-gitignore = true
target-version = "py311"

[tool.ruff.pydocstyle]
convention = "google"